--- a/jzyx.plist
+++ b/jzyx.plist
@@ -11,7 +11,7 @@
                                         <key>kind</key>
                                         <string>software-package</string>
                                         <key>url</key>
-                                        <string>https://github.com/coSuam/myTest/blob/master/jzyx.ipa</string>
+                                        <string>http://172.16.19.176:8090/kit_file_server/file/version-admin/20191225/f33cf0cbbedc415baf0618dbe04afb86.ipa</string>
                                 </dict>
                                 <dict>
                                    <key>kind</key>
@@ -19,7 +19,7 @@
                                    <key>needs-shine</key>
                                    <true/>
                                    <key>url</key>
-                                   <string>https://github.com/coSuam/myTest/blob/master/log.jpg</string>
+                                   <string>http://172.16.19.176:8090/kit_file_server/file/version-admin/20191225/d06dbd160c19407f9905bd93c99fc014.jpg</string>
                                 </dict>
                                 <dict>
                                   <key>kind</key>
@@ -27,7 +27,7 @@
                                   <key>needs-shine</key>
                                   <true/>
                                   <key>url</key>
-                                  <string>https://github.com/coSuam/myTest/blob/master/log.jpg</string>
+                                  <string>http://172.16.19.176:8090/kit_file_server/file/version-admin/20191225/d06dbd160c19407f9905bd93c99fc014.jpg</string>
                                 </dict>
                         </array>
                         <key>metadata</key>
