--- a/jzyx.plist
+++ b/jzyx.plist
@@ -11,7 +11,7 @@
                                         <key>kind</key>
                                         <string>software-package</string>
                                         <key>url</key>
-                                        <string>http://172.16.19.176:8090/kit_file_server/file/version-admin/20191225/f33cf0cbbedc415baf0618dbe04afb86.ipa</string>
+                                        <string>http://88.128.18.189:8080/kit_file_server/file/version-admin/20200113/0047709820874f34bab3c44043a0e1f6.ipa</string>
                                 </dict>
                                 <dict>
                                    <key>kind</key>
@@ -19,7 +19,7 @@
                                    <key>needs-shine</key>
                                    <true/>
                                    <key>url</key>
-                                   <string>http://172.16.19.176:8090/kit_file_server/file/version-admin/20191225/d06dbd160c19407f9905bd93c99fc014.jpg</string>
+                                   <string>http://88.128.18.189:8080/kit_file_server/file/version-admin/20200113/5317261ecc5644759604fd48ab088b42.jpg</string>
                                 </dict>
                                 <dict>
                                   <key>kind</key>
@@ -27,13 +27,13 @@
                                   <key>needs-shine</key>
                                   <true/>
                                   <key>url</key>
-                                  <string>http://172.16.19.176:8090/kit_file_server/file/version-admin/20191225/d06dbd160c19407f9905bd93c99fc014.jpg</string>
+                                  <string>http://88.128.18.189:8080/kit_file_server/file/version-admin/20200113/5317261ecc5644759604fd48ab088b42.jpg</string>
                                 </dict>
                         </array>
                         <key>metadata</key>
                         <dict>
                                 <key>bundle-identifier</key>
-                                <string></string>
+                                <string>com.kit.sales</string>
                                 <key>bundle-version</key>
                                 <string>2.0.1</string>
                                 <key>kind</key>
